test-logs-failed/test-duration-0.2.0.0.doctest.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - duration-0.2.0.0 (test:doctest) (ephemeral targets)
Preprocessing test suite 'doctest' for duration-0.2.0.0...
Building test suite 'doctest' for duration-0.2.0.0...
Running 1 test suites...
Test suite doctest: RUNNING...

src/Data/Time/Clock/Duration/QQ.hs:81:5: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression: QuasiQuoter {quoteExp = buildExp Nothing}
      In an equation for ‘t’:
          t = QuasiQuoter {quoteExp = buildExp Nothing}

src/Data/Time/Clock/Duration/QQ.hs:113:5: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression:
        QuasiQuoter {quoteExp = buildExp (Just (Second, ''E0))}
      In an equation for ‘s’:
          s = QuasiQuoter {quoteExp = buildExp (Just (Second, ''E0))}

src/Data/Time/Clock/Duration/QQ.hs:123:6: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression:
        QuasiQuoter {quoteExp = buildExp (Just (Millisec, ''E3))}
      In an equation for ‘ms’:
          ms = QuasiQuoter {quoteExp = buildExp (Just (Millisec, ''E3))}

src/Data/Time/Clock/Duration/QQ.hs:133:6: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression:
        QuasiQuoter {quoteExp = buildExp (Just (Microsec, ''E6))}
      In an equation for ‘µs’:
          µs = QuasiQuoter {quoteExp = buildExp (Just (Microsec, ''E6))}

src/Data/Time/Clock/Duration/QQ.hs:143:6: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression:
        QuasiQuoter {quoteExp = buildExp (Just (Nanosec, ''E9))}
      In an equation for ‘ns’:
          ns = QuasiQuoter {quoteExp = buildExp (Just (Nanosec, ''E9))}

src/Data/Time/Clock/Duration/QQ.hs:153:6: warning: [GHC-20125] [-Wmissing-fields]
    • Fields of ‘QuasiQuoter’ not initialised:
        quotePat :: String -> Q Language.Haskell.TH.Syntax.Pat
        quoteType :: String -> Q Type
        quoteDec :: String -> Q [Language.Haskell.TH.Syntax.Dec]
    • In the expression:
        QuasiQuoter {quoteExp = buildExp (Just (Picosec, ''E12))}
      In an equation for ‘ps’:
          ps = QuasiQuoter {quoteExp = buildExp (Just (Picosec, ''E12))}
src/Data/Time/Clock/Duration/QQ.hs:41: failure in expression `[t| 42s |] :: DiffTime'
expected: 42s
 but got: 
          ^
          <interactive>:43:5: error:
              • Illegal type: ‘42’ Perhaps you intended to use DataKinds
              • In the Template Haskell quotation [t| 42 s |]
          
          <interactive>:43:7: error: [GHC-76037]
              • Not in scope: type variable ‘s’
              • In the Template Haskell quotation [t| 42 s |]

src/Data/Time/Clock/Duration/Types.hs:42: failure in expression `[t| 42s |] :: DiffTime'
expected: 42s
 but got: 
          ^
          <interactive>:139:5: error:
              • Illegal type: ‘42’ Perhaps you intended to use DataKinds
              • In the Template Haskell quotation [t| 42 s |]
          
          <interactive>:139:7: error: [GHC-76037]
              • Not in scope: type variable ‘s’
              • In the Template Haskell quotation [t| 42 s |]

Examples: 35  Tried: 23  Errors: 0  Failures: 2
Test suite doctest: FAIL
Test suite logged to:
/tmp/workdir-duration/duration-0.2.0.0/dist-newstyle/build/x86_64-linux/ghc-9.6.6/duration-0.2.0.0/t/doctest/test/duration-0.2.0.0-doctest.log
0 of 1 test suites (0 of 1 test cases) passed.
Error: [Cabal-7125]
Tests failed for test:doctest from duration-0.2.0.0.

